version/0.9/_sources/api/ansys/speos/core/face/Face.rst.txt






:class:`Face`
=============


.. py:class:: ansys.speos.core.face.Face(speos_client, name, description = '', metadata = None, parent_body = None)

   
   Feature : Face.


   :Parameters:

       **speos_client** : :obj:`ansys.speos.core.kernel.client.SpeosClient`
           The Speos instance client.

       **name** : :class:`python:str`
           Name of the feature.

       **description** : :class:`python:str`
           Description of the feature.
           By default, ``""``.

       **metadata** : :obj:`Optional`\[:obj:`Mapping`\[:class:`python:str`, :class:`python:str`]]
           Metadata of the feature.
           By default, ``{}``.

       **parent_body** : :obj:`ansys.speos.core.body.Body`, :obj:`optional`
           Feature containing this face.
           By default, ``None``.

   :Attributes:

       **face_link** : :obj:`ansys.speos.core.kernel.face.FaceLink`
           Link object for the face in database.













   ..
       !! processed by numpydoc !!



.. py:currentmodule:: Face

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~commit`
            - Save feature: send the local data to the speos server database.
          * - :py:attr:`~reset`
            - Reset feature: override local data by the one from the speos server database.
          * - :py:attr:`~delete`
            - Delete feature: delete data from the speos server database.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~geo_path`
            - Geometry path to be used within other speos objects.
          * - :py:attr:`~vertices`
            - Get face vertices.
          * - :py:attr:`~facets`
            - Get face facets.
          * - :py:attr:`~normals`
            - Get face normals.
          * - :py:attr:`~vertices_data`
            - List of data applied to vertices (like texture coordinates uv).


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~face_link`
            - Link object for the face in database.



   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - Return the string representation of the face.




Import detail
-------------

.. code-block:: python

    from ansys.speos.core.face import Face

Property detail
---------------

.. py:property:: geo_path
   :type: ansys.speos.core.geo_ref.GeoRef


   
   Geometry path to be used within other speos objects.
















   ..
       !! processed by numpydoc !!

.. py:property:: vertices
   :type: List[float]


   
   Get face vertices.





   :Returns:

       :obj:`List`\[:class:`python:float`]
           Coordinates of all points [p1x p1y p1z p2x p2y p2z ...].











   ..
       !! processed by numpydoc !!

.. py:property:: facets
   :type: List[int]


   
   Get face facets.





   :Returns:

       :obj:`List`\[:class:`python:int`]
           Indexes of points for all triangles (t1_1 t1_2 t1_3 t2_1 t2_2 t2_3 ...).











   ..
       !! processed by numpydoc !!

.. py:property:: normals
   :type: List[float]


   
   Get face normals.





   :Returns:

       :obj:`List`\[:class:`python:float`]
           Normal vectors for all points [n1x n1y n1z n2x n2y n2z ...].











   ..
       !! processed by numpydoc !!

.. py:property:: vertices_data
   :type: list[ansys.speos.core.generic.parameters.MeshData]


   
   List of data applied to vertices (like texture coordinates uv).

   Each MeshData will be stored in a specific channel. This data can be used for example to
   apply a texture on the face by associating the uv coordinates to the vertices and then
   applying a texture with UV mapping on the face.




   :Returns:

       :class:`python:list`\[:obj:`ansys.speos.core.generic.parameters.MeshData`]
           List of MeshData











   ..
       !! processed by numpydoc !!



Attribute detail
----------------

.. py:attribute:: face_link
   :value: None


   
   Link object for the face in database.
















   ..
       !! processed by numpydoc !!



Method detail
-------------

.. py:method:: __str__()

   
   Return the string representation of the face.
















   ..
       !! processed by numpydoc !!

.. py:method:: commit()

   
   Save feature: send the local data to the speos server database.





   :Returns:

       :obj:`ansys.speos.core.face.Face`
           Face feature.











   ..
       !! processed by numpydoc !!

.. py:method:: reset()

   
   Reset feature: override local data by the one from the speos server database.





   :Returns:

       :obj:`ansys.speos.core.face.Face`
           Face feature.











   ..
       !! processed by numpydoc !!

.. py:method:: delete()

   
   Delete feature: delete data from the speos server database.

   The local data are still available




   :Returns:

       :obj:`ansys.speos.core.face.Face`
           Face feature.











   ..
       !! processed by numpydoc !!




